	* config/Makefile.am: removed StartScript and StopScript from DATA
	  variable so that x flag is set.
	* config/uwmrc-behaviour.hook: removed tick to avoid preprocessor
	  warning parsing the file.
	* configure.in: changed version number to 2.8 and added
	  config/StartScript to output file list.
	* doc/Makefile.am: added the README file to installed documentation.
	* config/StartScript moved to config/StartScript.in: now using autoconf
	  macro for less to find installed README file.
	* uwm/init.c: uwm now sets UDEdir environment on system installation
	  directory on startup if UDEdir has not yet been set.

2002-02-10  Christian Ruppert <arc@gmx.li>

	* uwm/init.h: added InitStruct.BehaviourFlags and BF_IN_WIN_CTRL
	  definition.
	* uwm/uwm.h: added braces around event mask definitions
	* uwm/uwm.h: added UWM_MODIFIERS definition.
	* uwm/init.c: replaced modifier key combination with UWM_MODIFIERS
	  predefinition.
	* uwm/init.c (InitDefaults): added default initialisation of
	  InitS.BehaviourFlags.
	* uwm/init.c: added config option BehaviourFlags
	* doc/manual.tex: added description for BehaviourFlags option.
	* doc/manual.tex: started chapter "The Keyboard".
	* doc/html/Makefile.am: removing manual.css now every time we rebuilt
	  to make sure it is rebuilt.
	* config/uwmrc-behaviour.hook: added BehaviourFlags example.
	* uwm/handlers.c (HandleButtonPress): added support for
	  BehaviourFlags/BF_IN_WIN_CTRL option.

2002-01-21  Christian Ruppert <arc@gmx.li>

	* uwm/properties.c (UpdateMotifHints): bugfix: now remaping window
	  after redrawing  border in case window is visible while motif hints
	  change.
	* configure.in: added po/Makefile to output list

2001-10-29  Christian Ruppert <arc@gmx.li>

	* uwm/handlers.c (HandleUnmapNotify): we can only expect unmap events
	  for the managed window itself so i moved decreasing of
	  expected_unmap_events into the event.window == uc->win conditional
	  code. fixes the 'disapearing xmms on restart'-bug
